Prevent a member from transitioning to secondary state when there are auth problems SERVER-5948